passing all project 4 tests... most of the time
must have threading issues that somehow didn't show up on project 3?
very confused.